
IF(WIN32)
	add_library(sdl SHARED IMPORTED GLOBAL)
	
	set_target_properties(sdl
		PROPERTIES
			IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/lib/x86/SDL2.dll"
			IMPORTED_IMPLIB "${CMAKE_CURRENT_SOURCE_DIR}/lib/x86/SDL2.lib"
			INTERFACE_INCLUDE_DIRECTORIES "${CMAKE_CURRENT_SOURCE_DIR}/include"
	)
	
	INSTALL(FILES "${CMAKE_CURRENT_SOURCE_DIR}/lib/x86/SDL2.dll"
			DESTINATION ${BINARY_DESTINATION}
	)
		
	SET(TARGET_COPY_FILES ${TARGET_COPY_FILES} "${CMAKE_CURRENT_SOURCE_DIR}/lib/x86/SDL2.dll" CACHE INTERNAL "" FORCE)
	
	SET(SDL_LIBS sdl CACHE INTERNAL "")
	
	add_library(sdlmain STATIC IMPORTED GLOBAL)
	
	set_target_properties(sdlmain
		PROPERTIES
			IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/lib/x86/SDL2main.lib"
			INTERFACE_INCLUDE_DIRECTORIES "${CMAKE_CURRENT_SOURCE_DIR}/include"
	)
ELSE(WIN32)
	IF(APPLE)
		find_package(SDL VERSION 2.0.0)
		
		IF(NOT SDL_FOUND)
			MESSAGE(STATUS "SDL not found: Using included SDL libraries")
			SET(FSO_USE_SDL_FRAMEWORK ON) # We ship these for mac
		ENDIF(NOT SDL_FOUND)
	ELSE(APPLE)
		find_package(SDL VERSION 2.0.0 REQUIRED)
	ENDIF(APPLE)

	IF(FSO_USE_SDL_FRAMEWORK)
		ADD_IMPORTED_LIB(sdl "${FSO_MAC_FRAMEWORKS}/SDL.framework/Headers" "${FSO_MAC_FRAMEWORKS}/SDL.framework/SDL" SHARED)
	ELSE(FSO_USE_SDL_FRAMEWORK)
		ADD_IMPORTED_LIB(sdl "${SDL_INCLUDE_DIR}" "${SDL_LIBRARY}" SHARED)
	ENDIF(FSO_USE_SDL_FRAMEWORK)
	
	SET(SDL_LIBS sdl CACHE INTERNAL "")
ENDIF(WIN32)
