
SET(MONGOOSE_SOURCES
	mongoose.c
	mongoose.h)

ADD_LIBRARY(mongoose STATIC ${MONGOOSE_SOURCES})
	
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

set_target_properties(mongoose
	PROPERTIES
		FOLDER "3rdparty"
		INTERFACE_INCLUDE_DIRECTORIES ${CMAKE_CURRENT_SOURCE_DIR}
)

IF(MSVC)
	set_target_properties(mongoose
		PROPERTIES
			STATIC_LIBRARY_FLAGS "/LTCG"
	)
ENDIF(MSVC)

SET(MONGOOSE_LIBRARIES mongoose CACHE INTERNAL "mongoose library")
